<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="300dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorHeaders"
                android:text="@string/notes"
                android:gravity="center_horizontal"
                android:textColor="@color/colorTextOnBlue"/>

        </LinearLayout>

        <ScrollView
            android:id="@+id/note_scroll"
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <EditText
                android:id="@+id/note_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine|textCapSentences"
                />

        </ScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note_scroll"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_btn"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/save_btn" />

            <Button
                android:id="@+id/clear_btn"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:text="@string/clear" />

        </LinearLayout>



    </LinearLayout>

</ScrollView>